# hpm-ral

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  raltool-cfg.yml
.github/workflows/: ci.yaml
devices/: common.yaml  hpm6750.yaml
devices/peripheral/: dma.yaml  dmamux.yaml  gpio.yaml  ioc.yaml  otp.yaml  rtc.yaml  spi.yaml  sysctl.yaml  tmr.yaml  uart.yaml
examples/blink/: Cargo.toml  build.rs  memory.x
examples/blink/.cargo/: config.toml
examples/blink/src/: main.rs
examples/gpio-interrupt/: Cargo.toml  build.rs
examples/gpio-interrupt/src/: ext_int.rs  external_int.rs  main.rs
examples/hello-world/: Cargo.toml  build.rs
examples/hello-world/src/: main.rs
examples/hpm6750evkmini/: Cargo.toml
examples/hpm6750evkmini/src/: gpio.rs  lib.rs  prelude.rs  spi.rs  uart.rs
examples/spi-lcd/: Cargo.toml  memory.x
examples/spi-lcd/.cargo/: config.toml
examples/spi-lcd/src/: main.rs
examples/uart-dma/: Cargo.toml
examples/uart-dma/src/: dma.rs  main.rs  uart.rs
raltool/src/: ir.rs  main.rs  svd2ir.rs
raltool/src/generate/: device.rs  mod.rs
raltool/src/transform/: mod.rs
script/: check_latest.sh  group_value.py
src/: hpm6750.rs  hpm6750.x  lib.rs
src/blocks/hpm6750/: acmp.rs  adc.rs  adc3.rs  bcfg.rs  bgpr.rs  bkey.rs  bmon.rs  bpor.rs  bsec.rs  butn.rs  cam.rs  can.rs  conctl.rs  dao.rs  dma.rs  dmamux.rs  dram.rs  enet.rs  gpio.rs  gpiom.rs  gptmr.rs  hall.rs  hdma.rs  i2c.rs  i2s.rs  ioc.rs  jpeg.rs  keym.rs  lcdc.rs  mbx0a.rs  mchtmr.rs  mono.rs  ntmr.rs  otp.rs  pcfg.rs  pdm.rs  pdma.rs  pgpr.rs  plic.rs  plicsw.rs  (+21 more)
