[package]
name = "hpm-ral"
authors = ["tfx2001 <tfx2001@outlook.com>"]
description = "Register access layer for all HPMicro microcontrollers"
repository = "https://github.com/hpm-rs/hpm-ral"
readme = "README.md"
keywords = ["hpmicro", "embedded", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT"
edition = "2021"
include = ["src/*", "build.rs", "Cargo.toml", "doc.md"]
version = "0.0.1"

[dependencies]
ral-registers = "0.1"
plic = { version = "0.0.2", features = ["primitive-id"] }

[lib]
bench = false
test = false

[features]
rt = []
hpm6750 = []

[workspace]
members = ["raltool"]
