[package]
name = "gpio-interrupt"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-ral = { path = "../..", features = ["hpm6750", "rt"] }
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
critical-section = "1.1"
plic = { version = "0.0.2", features = ["primitive-id"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
hpm6750evkmini = { path = "../hpm6750evkmini" }
