[package]
name = "uart-dma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpm-ral = { path = "../..", features = ["hpm6750", "rt"] }
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
